<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
...
            android:background="@drawable/button_rectangle"
            android:text="@string/sign_in"
             />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signUpButton"
            style="@style/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rectangle"
            android:text="@string/sign_up"
            />
...
